# mormicwatch

./: Cargo.toml  README.md
apps/mormicwatch-gui/: Cargo.toml
apps/mormicwatch-gui/src/: main.rs
apps/mormicwatch-gui/src/alerts/: desktop.rs  mod.rs  rules.rs  sounds.rs
apps/mormicwatch-gui/src/app/: dashboard.rs  history_graph.rs  mod.rs  readiness_card.rs  settings_window.rs  style.rs  target_zone.rs  theme.rs  widgets.rs
apps/mormicwatch-gui/src/config/: mod.rs  persistence.rs  settings.rs
apps/mormicwatch-gui/src/http/: server.rs
apps/mormicwatch-gui/src/obs/: mod.rs  recording.rs  websocket.rs
apps/mormicwatch-gui/src/services/: audio_service.rs  health_service.rs  mod.rs  obs_service.rs
assets/overlay/: app.js  index.html  style.css
crates/mormicwatch-core/: Cargo.toml
crates/mormicwatch-core/src/: lib.rs
crates/mormicwatch-core/src/audio/: capture.rs  devices.rs  health.rs  history.rs  levels.rs  mod.rs  quality.rs  readiness.rs  recommendation.rs
crates/mormicwatch-core/src/export/: mod.rs  recommendations.rs  status.rs
crates/mormicwatch-core/src/models/: app_state.rs  audio_metrics.rs  health_score.rs  history_point.rs  mic_status.rs  mod.rs  readiness_report.rs  recording_quality.rs  status_snapshot.rs
crates/mormicwatch-core/src/recommendations/: engine.rs
