[package]
name = "mormicwatch"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
mormicwatch-core = { path = "../../crates/mormicwatch-core" }

anyhow = "1"
chrono = "0.4"
crossbeam-channel = "0.5"
eframe = "0.33"
egui = "0.33"
futures-util = "0.3"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.27"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
